2003-09-26  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/ia64/getcontext.S: Pass fourth argument to
	rt_sigprocmask system call.

2003-09-25  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/dl-execstack.c (_dl_make_stack_executable):
	Don't check for zero __libc_stack_end, it should be initialized.
	[_STACK_GROWS_DOWN] [PROT_GROWSDOWN]: Try using PROT_GROWSDOWN flag
	and fall back if it fails with EINVAL.
	[_STACK_GROWS_UP] [PROT_GROWSUP]: Likewise for PROT_GROWSUP.

2003-09-25  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/dl-procinfo.c: Include
	sysdeps/i386/dl-procinfo.c instead of
	sysdeps/unix/sysv/linux/i386/dl-procinfo.c.
	* sysdeps/unix/sysv/linux/i386/dl-procinfo.h: Avoid using
	#include_next.

2003-09-25  Ulrich Drepper  <drepper@redhat.com>

	* posix/regcomp.c (peek_token): Remove recent changes for anchor
	handling again.
	(parse_reg_exp): Likewise.
	* posix/regex.h: Remove RE_CARET_ANCHORS_HERE.

	* csu/Makefile ($(objpfx)version-info.h): Fix sed script to handle
	banners.

	* nis/nis_table.c (nis_list): Always strdup string used with
	ibreq->ibr_name.  Add several NULL pointer checks.

	* nis/nss_nisplus/nisplus-alias.c: Add check for NULL return value
	of nis_list.
	* nis/nss_nisplus/nisplus-ethers.c: Likewise.
	* nis/nss_nisplus/nisplus-grp.c: Likewise.
	* nis/nss_nisplus/nisplus-hosts.c: Likewise.
	* nis/nss_nisplus/nisplus-netgrp.c: Likewise.
	* nis/nss_nisplus/nisplus-network.c: Likewise.
	* nis/nss_nisplus/nisplus-proto.c: Likewise.
	* nis/nss_nisplus/nisplus-publickey.c: Likewise.
	* nis/nss_nisplus/nisplus-pwd.c: Likewise.
	* nis/nss_nisplus/nisplus-rpc.c: Likewise.
	* nis/nss_nisplus/nisplus-service.c: Likewise.
	* nis/nss_nisplus/nisplus-spwd.c: Likewise.

	* sysdeps/unix/sysv/linux/alpha/bits/mman.h: Define PROT_GROWSDOWN
	and PROT_GROWSUP.
	* sysdeps/unix/sysv/linux/arm/bits/mman.h: Likewise.
	* sysdeps/unix/sysv/linux/cris/bits/mman.h: Likewise.