@@ -33,7 +33,10 @@ ustat (dev_t dev, struct ustat *ubuf)
   /* We must convert the value to dev_t type used by the kernel.  */
   k_dev =  dev & ((1ULL << 32) - 1);
   if (k_dev != dev)
-    return EOVERFLOW;
+    {
+      __set_errno (EINVAL);
+      return -1;
+    }
 
   return INLINE_SYSCALL (ustat, 2, (unsigned int) k_dev, CHECK_1 (ubuf));
 }
